@@ -1,3 +1,8 @@
+2006-02-10  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
+
+	* perllib/Torrus/DevDiscover/CiscoIOS.pm: Cisco Docsis bundle
+	interfaces excluded from discovery
+
 2006-01-06  Stanislav Sinyagin  <ssinyagin@users.sourceforge.net>
 
 	* perllib/Torrus/RPN.pm: New RPM functions: INF, NEGINF
